<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Todo.Details"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/title_layout"
                style="@style/Todo.Details.Layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="@integer/title_max_value"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/title"
                    style="@style/Todo.Details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_hint"
                    android:maxLength="@integer/title_max_value"
                    android:nextFocusForward="@+id/description" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/description_layout"
                style="@style/Todo.Details.Layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="@integer/description_max_value"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description"
                    style="@style/Todo.Details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description_hint"
                    android:maxLength="@integer/description_max_value"
                    android:nextFocusForward="@+id/surnameText" />
            </com.google.android.material.textfield.TextInputLayout>

<!--            <com.google.android.material.textfield.TextInputLayout-->
<!--                android:id="@+id/icon_layout"-->
<!--                style="@style/Todo.Details.Layout"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/description_layout">-->

<!--                <com.google.android.material.textfield.TextInputEditText-->
<!--                    android:id="@+id/icon"-->
<!--                    style="@style/Todo.Details"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:hint="@string/icon_hint"-->
<!--                    android:nextFocusForward="@+id/surnameText" />-->
<!--            </com.google.android.material.textfield.TextInputLayout>-->

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/test_rb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/test"/>
                <RadioButton
                    android:id="@+id/now_rb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/now"/>
                <RadioButton
                    android:id="@+id/good_rb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/good"/>
            </RadioGroup>

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelButton"
        style="@style/Todo.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveButton"
        style="@style/Todo.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>